crates/mwl-ir/src/lower/snapshots/mwl_ir__lower__tests__writing_a_string_element_through_a_string_local_key_retains_both_key_and_value.snap
---
source: crates/mwl-ir/src/lower.rs
expression: "print_function(&f, map.file(file))"
---
fn m(object, array, string, string) -> void {
  bb0:
    safepoint
    v0 = param 0  ; object
    v1 = param 1  ; array
    v2 = param 2  ; string
    v3 = param 3  ; string
    ; stmt s0 @4:5-4:17
    retain v2
    retain v3
    v4 = array.set v1, v2, v3  ; array
    release v4
    release v2
    release v0
    release v3
    return
}
