crates/mwl-ir/src/lower/snapshots/mwl_ir__lower__tests__writing_an_int_element_through_a_literal_key_normalizes_it_to_a_string.snap
---
source: crates/mwl-ir/src/lower.rs
expression: "print_function(&f, map.file(file))"
---
fn m(object, array) -> void {
  bb0:
    safepoint
    v0 = param 0  ; object
    v1 = param 1  ; array
    ; stmt s0 @4:5-4:15
    v2 = const.int 0  ; int
    v3 = helper.int_to_string v2  ; string
    v4 = const.int 5  ; int
    v5 = array.set v1, v3, v4  ; array
    release v5
    release v0
    return
}
