crates/mwl-ir/src/lower/snapshots/mwl_ir__lower__tests__writing_through_a_plain_object_receiver_writes_by_name.snap
---
source: crates/mwl-ir/src/lower/mod.rs
expression: "print_function(&f, map.file(file))"
---
fn m(object, object) -> void {
  bb0:
    safepoint
    v0 = param 0  ; object
    v1 = param 1  ; object
    ; stmt s0 @4:5-4:15
    v2 = const.int 1  ; int
    v3 = tag v2  ; tagged
    v4 = slot.set v1, x @0, v3 ! bb1  ; void
    release v3
    release v1
    release v0
    return
  bb1:
    release v3
    release v1
    release v0
    propagate "m() at t.mwl:4"
}
